logs/django-starter-box.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/djaccount'...
Listing './lib/python3.5/site-packages/djaccount/backends'...
Listing './lib/python3.5/site-packages/djaccount/models'...
Listing './lib/python3.5/site-packages/djaccount/tests'...
Compiling './lib/python3.5/site-packages/djaccount/tests/models.py'...
***   File "./lib/python3.5/site-packages/djaccount/tests/models.py", line 39
    print 'WARNING: Database email column is case sensitive'
                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/djajax'...
Listing './lib/python3.5/site-packages/djajax/tests'...
Listing './lib/python3.5/site-packages/django_starter_box-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/djbase'...
Listing './lib/python3.5/site-packages/djbase/templates'...
Listing './lib/python3.5/site-packages/djbase/templates/djbase'...
Listing './lib/python3.5/site-packages/djbase/templatetags'...
Listing './lib/python3.5/site-packages/djbase/tests'...
Compiling './lib/python3.5/site-packages/djbase/tests/utils.py'...
***   File "./lib/python3.5/site-packages/djbase/tests/utils.py", line 50
    ('2013-01-30T11:12:13+08:00', timezone.make_aware(datetime(2013, 1, 30, 03, 12, 13, 0), timezone=timezone.utc)),
                                                                             ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/djbase/utils'...
Listing './lib/python3.5/site-packages/djbase/utils/mock'...
Listing './lib/python3.5/site-packages/djcdn'...
Listing './lib/python3.5/site-packages/djcdn/filters'...
Listing './lib/python3.5/site-packages/djcdn/management'...
Listing './lib/python3.5/site-packages/djcdn/management/commands'...
Listing './lib/python3.5/site-packages/djcdn/storage'...
Listing './lib/python3.5/site-packages/djcdn/templatetags'...
Listing './lib/python3.5/site-packages/djcdn/tests'...
Listing './lib/python3.5/site-packages/djmigrate'...
Listing './lib/python3.5/site-packages/djmigrate/management'...
Listing './lib/python3.5/site-packages/djmigrate/management/commands'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
